--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -30,6 +30,8 @@ services:
       # Security (CHANGE IN PRODUCTION)
       - JWT_SECRET_KEY=${JWT_SECRET_KEY:-dev-secret-key-change-in-prod}
       - SESSION_SECRET_KEY=${SESSION_SECRET_KEY:-dev-session-key-change-in-prod}
+      # Development mode - allows insecure defaults with warning
+      - DEBUG=true
       # Frontend URL for SSO redirects (local dev needs explicit URL due to different ports)
       - FRONTEND_URL=http://localhost:3000
     ports:
