--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -46,3 +46,14 @@ aiosqlite==0.20.0
 
 # Dev tools
 ruff==0.4.4
+
+# Security
+nh3>=0.2.17  # Fast HTML sanitization (binding to Rust ammonia)
+
+# Logging
+structlog>=24.1.0  # Structured logging
+python-json-logger>=2.0.7  # JSON logging fallback
+
+# Type checking
+mypy>=1.9.0  # Static type checker
+types-requests>=2.31.0  # Type stubs for requests
