fix: resolve CI failures
- Fix npm optional dependency bug on Alpine (use --prefer-offline fallback)
- Fix CSRF test URL matching (use includes() for flexible matching)

Resolves:
- Docker build failure: Cannot find module @rollup/rollup-linux-x64-musl
- Test failure: CSRF token test expecting wrong URL format

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -2,7 +2,8 @@
 FROM node:20-alpine AS build
 WORKDIR /app
 COPY package*.json ./
-RUN npm ci
+# Workaround for npm optional dependency bug on Alpine
+RUN npm ci --prefer-offline || npm install
 COPY . .
 RUN npm run build
 
