fix: replace real domain with example.com in tests and docs
- Updated test_csrf.py to use chad.example.com instead of real domain
- Updated .env.example to use example domain
- Updated comment in csrf.py to use example domain
- Prevents leaking actual hostname in codebase

--- a/.env.example
+++ b/.env.example
@@ -8,4 +8,4 @@ JWT_SECRET_KEY=your-random-secret-key-here
 # Public URL where CHAD is accessible
 # Used for: CSRF validation, webhook URLs, SSO redirects, email links
 # Example: https://chad.example.com
-APP_URL=https://chad.terrifiedbug.com
+APP_URL=https://chad.example.com
