fix: SSO CSRF error, health metrics, GeoIP crash, and SSL warnings
- Add CSRF exemption for SSO exchange endpoint (/api/auth/sso/exchange)
  The endpoint uses short-lived codes and doesn't require CSRF protection

- Record health metrics when logs are received via /api/logs endpoint
  Tracks logs_received, alerts_generated, and rules_triggered
  Enables Health page to display index status

- Fix GeoIP health check crash when enabled in external services
  Properly extract geoip_last_update from JSONB dict format
  Add error handling for datetime parsing
  Prevents entire /health/status endpoint from failing

- Suppress urllib3 InsecureRequestWarning when verify_certs=False
  Clean up Docker logs for self-signed certificate deployments

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -34,6 +34,7 @@ services:
       - DEBUG=true
       # Frontend URL for SSO redirects (local dev needs explicit URL due to different ports)
       - FRONTEND_URL=http://localhost:3000
+      - APP_URL=http://localhost:3000
     ports:
       - "8000:8000"
     depends_on:
