--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -130,6 +130,22 @@ services:
       - /app/node_modules
     command: npm run dev -- --host 0.0.0.0
 
+  # Mock enrichment webhook server for testing custom enrichment webhooks
+  # Start with: docker compose -f docker-compose.dev.yml up mock-webhook
+  mock-webhook:
+    build:
+      context: ./backend
+      dockerfile: Dockerfile
+    ports:
+      - "8888:8888"
+    volumes:
+      - ./backend:/app
+      - ./tools:/app/tools
+    entrypoint: []
+    command: python /app/tools/mock_enrichment_webhook.py
+    profiles:
+      - testing
+
 volumes:
   pgdata:
   chad_data:
