--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -59,6 +59,8 @@ services:
       - SESSION_SECRET_KEY=${SESSION_SECRET_KEY:-dev-session-key-change-in-prod}
       # Development mode - allows insecure defaults with warning
       - DEBUG=true
+      # Allow webhooks to internal IPs (for testing with mock-webhook service)
+      - ALLOW_INTERNAL_WEBHOOK_IPS=true
       # Frontend URL for SSO redirects (local dev needs explicit URL due to different ports)
       - FRONTEND_URL=http://localhost:3000
       - APP_URL=http://localhost:3000
@@ -103,6 +105,8 @@ services:
       - SESSION_SECRET_KEY=${SESSION_SECRET_KEY:-dev-session-key-change-in-prod}
       # Development mode
       - DEBUG=true
+      # Allow webhooks to internal IPs (for testing with mock-webhook service)
+      - ALLOW_INTERNAL_WEBHOOK_IPS=true
       # Logging
       - LOG_LEVEL=${LOG_LEVEL:-info}
     depends_on:
