feat: add custom enrichment webhooks and UX improvements (#91)
* feat: add enrichment webhook database models and schemas

- Add EnrichmentWebhook model with namespace, SSRF-protected URL, encrypted
  credentials, timeout, rate limiting, and cache TTL configuration
- Add IndexPatternEnrichmentWebhook junction table linking patterns to webhooks
- Add Pydantic schemas for API validation including create/update/response types
- Add alembic migration for new tables

* feat: add enrichment webhook API and service

- Add CRUD endpoints for enrichment webhooks at /api/enrichment-webhooks
- Add webhook test endpoints for both saved and new webhooks
- Add index pattern enrichment config endpoints (GET/PUT /{id}/enrichments)
- Add enrichment webhook calling service with circuit breaker and caching
- Integrate SSRF protection via sanitize_webhook_url
- Add audit logging for all configuration changes

* feat: add enrichment webhook frontend and tests

- Add frontend API types and client for enrichment webhooks
- Create EnrichmentWebhooksSettings component for Settings page
- Create WebhooksTab for index pattern enrichment config
- Add CustomEnrichmentCard to AlertDetail for viewing webhook data
- Add backend tests for API and service layers (42 tests)
- Fix import order in enrichment webhook schemas

* docs: add webhook integration guide and mock server for testing

Add INTEGRATIONS.md documenting the custom enrichment webhook contract:
- Request/response format specifications
- HTTP status code handling
- Circuit breaker and SSRF protection details
- Example implementations in Python and Node.js

Add mock enrichment webhook server (tools/) for development testing:
- 7 endpoints simulating Entra ID, CMDB, HR systems
- Timeout and error endpoints for resilience testing
- Pre-configured mock data for users and assets
- Docker compose service with testing profile

* feat: add ALLOW_INTERNAL_WEBHOOK_IPS setting for dev/internal use

Add configurable bypass for SSRF protection to en

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -59,6 +59,8 @@ services:
       - SESSION_SECRET_KEY=${SESSION_SECRET_KEY:-dev-session-key-change-in-prod}
       # Development mode - allows insecure defaults with warning
       - DEBUG=true
+      # Allow webhooks to internal IPs (for testing with mock-webhook service)
+      - ALLOW_INTERNAL_WEBHOOK_IPS=true
       # Frontend URL for SSO redirects (local dev needs explicit URL due to different ports)
       - FRONTEND_URL=http://localhost:3000
       - APP_URL=http://localhost:3000
@@ -103,6 +105,8 @@ services:
       - SESSION_SECRET_KEY=${SESSION_SECRET_KEY:-dev-session-key-change-in-prod}
       # Development mode
       - DEBUG=true
+      # Allow webhooks to internal IPs (for testing with mock-webhook service)
+      - ALLOW_INTERNAL_WEBHOOK_IPS=true
       # Logging
       - LOG_LEVEL=${LOG_LEVEL:-info}
     depends_on:
@@ -129,6 +133,22 @@ services:
       - ./frontend:/app
       - /app/node_modules
     command: npm run dev -- --host 0.0.0.0
+
+  # Mock enrichment webhook server for testing custom enrichment webhooks
+  # Start with: docker compose -f docker-compose.dev.yml up mock-webhook
+  mock-webhook:
+    build:
+      context: ./backend
+      dockerfile: Dockerfile
+    ports:
+      - "8888:8888"
+    volumes:
+      - ./backend:/app
+      - ./tools:/app/tools
+    entrypoint: []
+    command: python /app/tools/mock_enrichment_webhook.py
+    profiles:
+      - testing
 
 volumes:
   pgdata:
